添加手机端测试页面

--- a/demo/JavaScript/_test.html
+++ b/demo/JavaScript/_test.html
@@ -5,6 +5,6 @@
 <!-- <link rel="stylesheet" href="123.css"> -->
 <body>
   <div id="wrap">123</div>
-  <script src="./fn.bind.js"></script>
+  <script src="./seal.js"></script>
 </body>
 </html>
